Adding x-canonical-id header
