# packages/kafka-event-consumer/test/config/test.swagger.json
@@ -86,6 +86,13 @@
                 "responses": {
                     "200": {
                         "description": "The document was successfully retrieved.",
+                        "headers": {
+                            "X-Canonical-Id": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        },
                         "content": {
                             "application/json": {
                                 "schema": {
